--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -24,10 +24,17 @@ jobs:
       # - uses: dart-lang/setup-dart@v1
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
-      - name: Install dependencies
+      - name: Install dependencies for binder package
         working-directory: ./package/binder
         run: dart pub get
 
+      # For binder sdk 
+      - name: Install dependencies for binder sdk
+        working-directory: ./sdk/binder
+        run: dart pub get
+      - name: Try to run  bin/binder.dart
+        working-directory: ./sdk/binder
+        run: dart bin/binder.dart
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
       #   run: dart format --output=none --set-exit-if-changed .
