--- a/sdk/binder/pubspec.yaml
+++ b/sdk/binder/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   build_runner: ^2.1.4
   build_web_compilers: ^3.2.1
   yaml: ^3.1.0
+  browser_launcher: ^1.0.0
 
 dev_dependencies:
   lints: ^1.0.0
