--- a/sdk/binder-bin/pubspec.yaml
+++ b/sdk/binder-bin/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   build_web_compilers: ^3.2.1
   yaml: ^3.1.0
   browser_launcher: ^1.0.0
+  http: ^0.13.4
 
 dev_dependencies:
   lints: ^1.0.0
