--- a/sdk/binder-package/pubspec.yaml
+++ b/sdk/binder-package/pubspec.yaml
@@ -7,7 +7,11 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
-  # path: ^1.8.0
+  path: ^1.8.0
+  build_runner: ^2.1.4
+  build_web_compilers: ^3.2.1
+  yaml: ^3.1.0
+  browser_launcher: ^1.0.0
 
 dev_dependencies:
   lints: ^1.0.0
