--- a/sdk/binder-package/pubspec.yaml
+++ b/sdk/binder-package/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   path: ^1.8.0
   build_runner: ^2.1.4
   build_web_compilers: ^3.2.1
-  yaml: ^3.1.0
   browser_launcher: ^1.0.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   lints: ^1.0.0
